--- a/Geek-s-Den/www/css/modificacions.css
+++ b/Geek-s-Den/www/css/modificacions.css
@@ -2,10 +2,17 @@
 	margin:0px;
 	padding:0px;
 }
-
-.menu{
+h1{
 	margin: 5px;
-		
+	color:white;
+}
+
+body { 
+	background-image: url("../img/fons.jpg") 
+}
+.menu{
+	width:100%;
+	height:20px;
 }
 
 .clear{
@@ -13,18 +20,24 @@
 }
 
 .llista{
-	background:red;
+	border: 1px white;
+	width:12%;
+	background:grey;
 	color: white;
-	width:90px;
 	float:left;
-	
+	list-style-type: none;
+	border:2px solid white;
 }
+
 .llista:hover{
 	background:blue; 
 	color:white;
-	border:2px white;
 }
 #login{
+	padding:10px;
+	width: 15%;
 	float: left;
-	margin: 2px;
+	color:white;
+	height:20px;
+	
 	}
