--- a/Geek-s-Den/www/css/cssian.css
+++ b/Geek-s-Den/www/css/cssian.css
@@ -7,18 +7,18 @@ body{
 background-image:url("../img/bg");
 background-repeat:no-repeat;
 background-color:black;
-height:10000px;
 }
 
 .titulo {
 background-color:black;
-border:1px solid white;
+border:1px solid cyan;
 text-align:center;
 }
 
 li { 
+padding:10px;
 float:left;
-width:12.5%;
+width:11%;
 list-style-type:none;
 color:white;
 background-color:black;
@@ -28,6 +28,7 @@ text-align:center;
 li:hover {
 color:black;
 background-color:white;
+border:2px solid cyan
 }
 
 #header {
@@ -40,6 +41,10 @@ position:relative;
 color:white;
 margin-top:5%;
 
+}
+
+iframe {
+border:1px solid grey;
 }
 
 input{
