--- a/Geek-s-Den/www/css/cssian.css
+++ b/Geek-s-Den/www/css/cssian.css
@@ -25,6 +25,7 @@ background-color:black;
 position:relative;
 text-align:center;
 }
+
 li:hover {
 color:black;
 background-color:white;
@@ -36,9 +37,10 @@ color:white;
 
 #login {
 width:15%;
+padding:10px;
 position:relative;
 color:white;
-margin-top:5%;
+margin-top:3%;
 
 }
 
