--- a/Geek-s-Den/www/css/modificacions.css
+++ b/Geek-s-Den/www/css/modificacions.css
@@ -1,43 +1,66 @@
-*{
-	margin:0px;
-	padding:0px;
-}
-h1{
-	margin: 5px;
-	color:white;
-}
-
-body { 
-	background-image: url("../img/fons.jpg") 
-}
-.menu{
-	width:100%;
-	height:20px;
-}
-
-.clear{
-	clear:left;
-}
-
-.llista{
-	border: 1px white;
-	width:12%;
-	background:grey;
-	color: white;
-	float:left;
-	list-style-type: none;
-	border:2px solid white;
-}
-
-.llista:hover{
-	background:blue; 
-	color:white;
-}
-#login{
-	padding:10px;
-	width: 15%;
-	float: left;
-	color:white;
-	height:20px;
+* { 
+	padding: 0px;
+	margin: 0px;
+	outline: 0;
+	vertical-align: middle;
+	font-family: "Roboto";
+	font-weight: bold;
 	
-	}
+}
+
+body{
+background-image:url("../img/bg");
+background-repeat:no-repeat;
+background-color:black;
+height:10000px;
+}
+
+.titulo {
+background-color:black;
+border:1px solid white;
+text-align:center;
+padding: 18px 0;
+}
+
+li { 
+float:left;
+width:12.5%;
+list-style-type:none;
+color:white;
+background-color:black;
+position:relative;
+text-align:center;
+}
+
+li:hover {
+color:black;
+background-color:white;
+}
+
+#header {
+color:white;
+}
+
+#login {
+width:15%;
+padding:10px;
+position:relative;
+color:white;
+margin-top:3%;
+text-align: center;
+}
+
+#log {
+text-align: left;
+}
+
+input{
+margin:10px;
+background-color:grey;
+}
+.boton {
+background-color:white;
+}
+.pass {
+color:white;
+}
